--- a/index.html
+++ b/index.html
@@ -1,183 +1,198 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
-	<title>Joey Tat&uacute; - CV</title>
-	<link rel="stylesheet" href="cv-style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Joey Tatú - CV</title>
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="cv-style.css">
 </head>
 
-<body>
-	<h1>Joey Tat&uacute;</h1>
-	<h2 class="shadow">Contact details</h2>
-	<h3><a href="mailto:x15015556@student.ncirl.ie">Email</a> | <a href="https://linkedin.com/in/JoeyTatu">LinkedIn</a>
-	</h3>
+<body class="bg-light">
 
-	<h2 class="shadow">About Joey</h2>
-	<div id="brief">
-		<p>I&#39;m a Cloud Computing and Software Development professional with a strong foundation in IT services, programming, and data management—backed by academic achievements and hands-on experience in diverse sectors.
-		</p>
+    <div class="container my-5">
 
-		<p>Latest experience gained as an Organisational Excellence Specialist at FoodCloud, I focused on managing historical data, automating external partners. I brought a detail-oriented mindset and a commitment to creating efficient, scalable, and future-proof solutions.</p>
+        <!-- Header -->
+        <div class="text-center mb-4">
+            <h1>Joey Tatú</h1>
+            <h2 class="shadow">Contact details</h2>
+            <h3>
+                <a href="mailto:x15015556@student.ncirl.ie">Email</a> |
+                <a href="https://linkedin.com/in/JoeyTatu" target="_blank">LinkedIn</a>
+            </h3>
+        </div>
 
-		<p>My academic background includes a BSc (Hons) in Computing and a Postgraduate Diploma in Cloud Computing from the National College of Ireland. I&#39;ve built projects using technologies like AWS, Java, Kotlin, Python, TensorFlow Lite, MongoDB, and Docker. I enjoy diving into challenges, whether it's building an Android app to help medical professionals identify diabetic retinopathy using AI or designing tools to help musicians optimise their acoustic setups.</p>
+        <!-- About Section -->
+        <h2 class="shadow">About Joey</h2>
+        <div id="brief" class="mb-5">
+            <p>I'm a Cloud Computing and Software Development professional with a strong foundation in IT services, programming, and data management—backed by academic achievements and hands-on experience in diverse sectors.</p>
 
-		<p>What sets me apart is my blended background—over a decade in hospitality taught me the value of communication, empathy, and teamwork. Combined with my technical training, I bring both people skills and problem-solving power to any role I take on.</p>
+            <p>Latest experience gained as an Organisational Excellence Specialist at FoodCloud, I focused on managing historical data, automating external partners. I brought a detail-oriented mindset and a commitment to creating efficient, scalable, and future-proof solutions.</p>
 
-		<p>Technically, I&#39;m proficient with:</p>
-		<ul>
-			<li>Programming: Java, Kotlin, Python, JavaScript, PHP, C#, HTML, XML, R, SQL &amp; NoSQL</li>
-			<li>Cloud &amp; DevOps: AWS (Lambda, S3, DynamoDB, CloudWatch, Chime, etc.), Docker, Terraform, Flask,Django</li>
-			<li>Data &amp; Visualisation: Power BI, Excel Pivot Tables, DBeaver, statistical analysis with R</li>
-			<li>Tools: GitHub, Android Studio, TensorFlow, Google Colab</li>
-		</ul>
+            <p>My academic background includes a BSc (Hons) in Computing and a Postgraduate Diploma in Cloud Computing from the National College of Ireland. I've built projects using technologies like AWS, Java, Kotlin, Python, TensorFlow Lite, MongoDB, and Docker. I enjoy diving into challenges, whether it's building an Android app to help medical professionals identify diabetic retinopathy using AI or designing tools to help musicians optimise their acoustic setups.</p>
 
-		<p>I&#39;m always looking to learn, collaborate, and innovate—whether that&#39;s through cloud-native solutions,backend services, or web and mobile development. If you're working on something exciting in the world of cloud, data, or digital transformation, I&#39;d love to connect.</p>
-	</div>
+            <p>What sets me apart is my blended background—over a decade in hospitality taught me the value of communication, empathy, and teamwork. Combined with my technical training, I bring both people skills and problem-solving power to any role I take on.</p>
 
-	<h2 class="shadow">Experience</h2>
+            <p>Technically, I'm proficient with:</p>
+            <ul>
+                <li>Programming: Java, Kotlin, Python, JavaScript, PHP, C#, HTML, XML, R, SQL & NoSQL</li>
+                <li>Cloud & DevOps: AWS (Lambda, S3, DynamoDB, CloudWatch, Chime, etc.), Docker, Terraform, Flask, Django</li>
+                <li>Data & Visualisation: Power BI, Excel Pivot Tables, DBeaver, statistical analysis with R</li>
+                <li>Tools: GitHub, Android Studio, TensorFlow, Google Colab</li>
+            </ul>
 
-	<div class="container">
+            <p>I'm always looking to learn, collaborate, and innovate—whether that's through cloud-native solutions, backend services, or web and mobile development. If you're working on something exciting in the world of cloud, data, or digital transformation, I'd love to connect.</p>
+        </div>
 
-		<!-- Header Row -->
-		<div class="row header">
-			<div class="cell">Position</div>
-			<div class="cell">Company</div>
-			<div class="cell">Dates</div>
-		</div>
+        <!-- Experience Section -->
+        <h2 class="shadow">Experience</h2>
+        <div class="container mb-5">
 
-		<!-- Experience Entries -->
-		<div class="row">
-			<div class="cell">Organisational Excellence Specialist</div>
-			<div class="cell">FoodCloud</div>
-			<div class="cell">Feb 2024 - Nov 2024</div>
-		</div>
+            <div class="row header bg-light fw-bold d-flex p-2">
+                <div class="cell col-md-4">Position</div>
+                <div class="cell col-md-4">Company</div>
+                <div class="cell col-md-4">Dates</div>
+            </div>
 
-		<div class="row">
-			<div class="cell">Retail Assistant</div>
-			<div class="cell">SVP - Vincent's</div>
-			<div class="cell">May 2023 - Jul 2023</div>
-		</div>
+            <div class="row d-flex p-2 border-bottom">
+                <div class="cell col-md-4">Organisational Excellence Specialist</div>
+                <div class="cell col-md-4">FoodCloud</div>
+                <div class="cell col-md-4">Feb 2024 - Nov 2024</div>
+            </div>
 
-		<div class="row">
-			<div class="cell">Academic Internship</div>
-			<div class="cell">National College of Ireland</div>
-			<div class="cell">Feb 2018 - Jul 2018</div>
-		</div>
+            <div class="row d-flex p-2 border-bottom">
+                <div class="cell col-md-4">Retail Assistant</div>
+                <div class="cell col-md-4">SVP - Vincent's</div>
+                <div class="cell col-md-4">May 2023 - Jul 2023</div>
+            </div>
 
-		<div class="row">
-			<div class="cell">Catering Assistant</div>
-			<div class="cell">Compass Group</div>
-			<div class="cell">Jan 2007 - Feb 2014</div>
-		</div>
+            <div class="row d-flex p-2 border-bottom">
+                <div class="cell col-md-4">Academic Internship</div>
+                <div class="cell col-md-4">National College of Ireland</div>
+                <div class="cell col-md-4">Feb 2018 - Jul 2018</div>
+            </div>
 
-		<div class="row">
-			<div class="cell">Catering Assistant</div>
-			<div class="cell">Lanperry Ltd.</div>
-			<div class="cell">Mar 2001 - Oct 2006</div>
-		</div>
+            <div class="row d-flex p-2 border-bottom">
+                <div class="cell col-md-4">Catering Assistant</div>
+                <div class="cell col-md-4">Compass Group</div>
+                <div class="cell col-md-4">Jan 2007 - Feb 2014</div>
+            </div>
 
-	</div>
+            <div class="row d-flex p-2 border-bottom">
+                <div class="cell col-md-4">Catering Assistant</div>
+                <div class="cell col-md-4">Lanperry Ltd.</div>
+                <div class="cell col-md-4">Mar 2001 - Oct 2006</div>
+            </div>
 
-	<h2 class="shadow">Education</h2>
+        </div>
 
-	<div class="container">
+        <!-- Education Section -->
+        <h2 class="shadow">Education</h2>
+        <div class="container mb-5">
 
-		<!-- Header Row -->
-		<div class="row header">
-			<div class="cell">Award</div>
-			<div class="cell">College</div>
-			<div class="cell">Dates</div>
-		</div>
+            <div class="row header bg-light fw-bold d-flex p-2">
+                <div class="cell col-md-4">Award</div>
+                <div class="cell col-md-4">College</div>
+                <div class="cell col-md-4">Dates</div>
+            </div>
 
-		<!-- Education Entries -->
-		<div class="row">
-			<div class="cell">Higher Diploma in Science in Computing (Artificial Intelligence/Machine Learning)</div>
-			<div class="cell">National College of Ireland</div>
-			<div class="cell">Sep 2025 - Aug 2026</div>
-		</div>
+            <div class="row d-flex p-2 border-bottom">
+                <div class="cell col-md-4">Higher Diploma in Science in Computing (Artificial Intelligence/Machine Learning)</div>
+                <div class="cell col-md-4">National College of Ireland</div>
+                <div class="cell col-md-4">Sep 2025 - Aug 2026</div>
+            </div>
 
-		<div class="row">
-			<div class="cell">Bachelor of Science in Computing (Software Development)</div>
-			<div class="cell">National College of Ireland</div>
-			<div class="cell">Sep 2018 - May 2021</div>
-		</div>
+            <div class="row d-flex p-2 border-bottom">
+                <div class="cell col-md-4">Bachelor of Science in Computing (Software Development)</div>
+                <div class="cell col-md-4">National College of Ireland</div>
+                <div class="cell col-md-4">Sep 2018 - May 2021</div>
+            </div>
 
-		<div class="row">
-			<div class="cell">Higher Certificate in Science in Computing Applications and Business Support</div>
-			<div class="cell">National College of Ireland</div>
-			<div class="cell">Sep 2015 - May 2018</div>
-		</div>
+            <div class="row d-flex p-2 border-bottom">
+                <div class="cell col-md-4">Higher Certificate in Science in Computing Applications and Business Support</div>
+                <div class="cell col-md-4">National College of Ireland</div>
+                <div class="cell col-md-4">Sep 2015 - May 2018</div>
+            </div>
 
-		<div class="row">
-			<div class="cell">QQI Level 5 (Business and IT)</div>
-			<div class="cell">Tallaght Adult Education Services</div>
-			<div class="cell">Sep 2014 - May 2015</div>
-		</div>
+            <div class="row d-flex p-2 border-bottom">
+                <div class="cell col-md-4">QQI Level 5 (Business and IT)</div>
+                <div class="cell col-md-4">Tallaght Adult Education Services</div>
+                <div class="cell col-md-4">Sep 2014 - May 2015</div>
+            </div>
 
-	</div>
+        </div>
 
+        <!-- Skills Section -->
+        <h2 class="shadow">Skills</h2>
+        <ul class="list-group list-group-flush row row-cols-1 row-cols-md-2 g-2 mb-5">
+            <li class="list-group-item">Agile & Waterfall Methodologies</li>
+            <li class="list-group-item">Amazon Web Services</li>
+            <li class="list-group-item">Android Studio</li>
+            <li class="list-group-item">AngularJS</li>
+            <li class="list-group-item">API Development</li>
+            <li class="list-group-item">Bookkeeping</li>
+            <li class="list-group-item">C#</li>
+            <li class="list-group-item">Catering</li>
+            <li class="list-group-item">Cloud 9</li>
+            <li class="list-group-item">Cloud Computing</li>
+            <li class="list-group-item">Cloud Computing IaaS</li>
+            <li class="list-group-item">Cloud Security</li>
+            <li class="list-group-item">Communication</li>
+            <li class="list-group-item">Cryptocurrency</li>
+            <li class="list-group-item" id="css-skill">CSS</li>
+            <li class="list-group-item">Customer Service</li>
+            <li class="list-group-item">Data Algorithms</li>
+            <li class="list-group-item">Data Management</li>
+            <li class="list-group-item">Data Structures</li>
+            <li class="list-group-item">Data Warehousing</li>
+            <li class="list-group-item">Databases</li>
+            <li class="list-group-item">DAX</li>
+            <li class="list-group-item">DevOps</li>
+            <li class="list-group-item">Git Bash</li>
+            <li class="list-group-item">GitHub</li>
+            <li class="list-group-item" id="html-skill">HTML</li>
+            <li class="list-group-item">Hybrid Cloud</li>
+            <li class="list-group-item">Java</li>
+            <li class="list-group-item">JavaScript</li>
+            <li class="list-group-item">jQuery</li>
+            <li class="list-group-item">Kotlin</li>
+            <li class="list-group-item">Microsoft Azure</li>
+            <li class="list-group-item">Microsoft Excel</li>
+            <li class="list-group-item">Microsoft Office</li>
+            <li class="list-group-item">Microsoft Power BI</li>
+            <li class="list-group-item">Microsoft PowerPoint</li>
+            <li class="list-group-item">Microsoft Word</li>
+            <li class="list-group-item">NetBeans</li>
+            <li class="list-group-item">Node.js</li>
+            <li class="list-group-item">Organisation Skills</li>
+            <li class="list-group-item">Problem Solving</li>
+            <li class="list-group-item">Programming</li>
+            <li class="list-group-item">Project Management</li>
+            <li class="list-group-item">Project Planning</li>
+            <li class="list-group-item">Python</li>
+            <li class="list-group-item">R</li>
+            <li class="list-group-item">Report & Analysis</li>
+            <li class="list-group-item">Report Writing</li>
+            <li class="list-group-item">Research Skills</li>
+            <li class="list-group-item">Ruby</li>
+            <li class="list-group-item">Ruby on Rails</li>
+            <li class="list-group-item">Software Development</li>
+            <li class="list-group-item">SQL</li>
+            <li class="list-group-item">Team Leadership</li>
+            <li class="list-group-item">Teamwork</li>
+            <li class="list-group-item">Time Management</li>
+            <li class="list-group-item">Usability Design</li>
+            <li class="list-group-item">Visual Studio</li>
+            <li class="list-group-item">Web Services API</li>
+            <li class="list-group-item">XML</li>
+        </ul>
 
-	<h2 class="shadow">Skills</h2>
-	<ul>
-		<li>Agile &amp; Waterfall Methodologies</li>
-		<li>Amazon Web Services</li>
-		<li>Android Studio</li>
-		<li>AngularJS</li>
-		<li>API Development</li>
-		<li>Bookkeeping</li>
-		<li>C#</li>
-		<li>Catering</li>
-		<li>Cloud 9</li>
-		<li>Cloud Computing</li>
-		<li>Cloud Computing IaaS</li>
-		<li>Cloud Security</li>
-		<li>Communication</li>
-		<li>Cryptocurrency</li>
-		<li id="css-skill">CSS</li>
-		<li>Customer Service</li>
-		<li>Data Algorithms</li>
-		<li>Data Management</li>
-		<li>Data Structures</li>
-		<li>Data Warehousing</li>
-		<li>Databases</li>
-		<li>DAX</li>
-		<li>DevOps</li>
-		<li>Git Bash</li>
-		<li>GitHub</li>
-		<li id="html-skill">HTML</li>
-		<li>Hybrid Cloud</li>
-		<li>Java</li>
-		<li>JavaScript</li>
-		<li>jQuery</li>
-		<li>Kotlin</li>
-		<li>Microsoft Azure</li>
-		<li>Microsoft Excel</li>
-		<li>Microsoft Office</li>
-		<li>Microsoft Power BI</li>
-		<li>Microsoft PowerPoint</li>
-		<li>Microsoft Word</li>
-		<li>NetBeans</li>
-		<li>Node.js</li>
-		<li>Organisation Skills</li>
-		<li>Problem Solving</li>
-		<li>Programming</li>
-		<li>Project Management</li>
-		<li>Project Planning</li>
-		<li>Python</li>
-		<li>R</li>
-		<li>Report &amp; Analysis</li>
-		<li>Report Writing</li>
-		<li>Research Skills</li>
-		<li>Ruby</li>
-		<li>Ruby on Rails</li>
-		<li>Software Development</li>
-		<li>SQL</li>
-		<li>Team Leadership</li>
-		<li>Teamwork</li>
-		<li>Time Management</li>
-		<li>Usability Design</li>
-		<li>Visual Studio</li>
-		<li>Web Services API</li>
-		<li>XML</li>
-	</ul>
+    </div>
+
 </body>
+</html>
