Updated index.html, button for index

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     </a>
     <br>
     <button id="channel-list" onclick="location.href='index.html'">
-      &larr;<br>Return to TVBridge.com
-    </button>
+      &larr;<br>Return Home
 
     <h1>Sky TV Guide - Channels</h1>
     <p>TV listings for Sky in the United Kingdom and Ireland</p>
