--- a/listings.html
+++ b/listings.html
@@ -17,14 +17,12 @@
     </button>
 
     <!-- Header with logo and back button -->
-   <header style="text-align:center; margin-bottom:12px;">
+    <header style="text-align:center; margin-bottom:12px;">
         <a href="index.html">
             <img src="images/logo.png" alt="TVBridge Logo" class="header-logo">
         </a>
         <br>
-        <button id="channel-list" onclick="location.href='index.html'">
-            &larr;<br>Back to channel list
-        </button>
+        <button class="return" onclick="location.href='/'">← Channel list</button>
     </header>
 
     <!-- Channel info -->
@@ -44,12 +42,16 @@
 
     <!-- Day navigation -->
     <div id="day-nav" style="text-align:center; margin:10px 0;">
-        <button id="prev-day" disabled>←<br>Previous day</button>
-        <button id="next-day">→<br>Next day</button>
+        <button id="prev-day">← Previous day</button>
+        <button id="next-day">Next day →</button>
     </div>
 
     <!-- Schedule container -->
     <div id="schedule"></div>
+
+    <button id="scroll-top" aria-label="Scroll to top"><small>↑ Top</small></button>
+    <button id="scroll-now" aria-label="Scroll to now"><small>Go to now/next ↓</small></button>
+
 
     <!-- Footer -->
     <footer>
