--- a/listings.html
+++ b/listings.html
@@ -19,7 +19,7 @@
     <!-- Header with logo and back button -->
     <header style="text-align:center; margin-bottom:12px;">
         <a href="index.html">
-            <img src="images/logo.svg" alt="TVBridge Logo" class="header-logo">
+            <img src="images/logo.png" alt="TVBridge Logo" class="header-logo">
         </a>
         <br>
         <button class="return" onclick="location.href='/'">← Channel list</button>
