Moved index to tv-guide, added nav bar to all pages

--- a/about.html
+++ b/about.html
@@ -6,7 +6,6 @@
   <title>Sky TV Guide - Channels</title>
   <link rel="icon" type="image/x-icon" href="images/fav-icon.ico">
   <link rel="stylesheet" href="css/global-style.css">
-  <link rel="stylesheet" href="css/tvguide-style.css">
   <link rel="stylesheet" href="css/header-style.css">
 </head>
 
@@ -21,7 +20,7 @@
     <!-- Nav + Search wrapper -->
     <div class="nav-search-wrapper">
       <nav class="main-nav">
-        <a class="nav-item active" href="index.html">
+        <a class="nav-item" href="index.html">
           <span class="nav-icon">
             <!-- Home Icon -->
             <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -32,7 +31,7 @@
           <span class="nav-label">Home</span>
         </a>
 
-        <a class="nav-item" href="about.html">
+        <a class="nav-item active" href="about.html">
           <span class="nav-icon">
             <!-- About Icon -->
             <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
