--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <!-- Nav + Search wrapper -->
     <div class="nav-search-wrapper">
       <nav class="main-nav">
-        <a class="nav-item active" href="index.html">
+        <a class="nav-item" href="index.html">
           <span class="nav-icon">
             <!-- Home Icon -->
             <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -45,7 +45,7 @@
           <span class="nav-label">About</span>
         </a>
 
-        <a class="nav-item" href="contact.html">
+        <a class="nav-item active" href="contact.html">
           <span class="nav-icon">
             <!-- Contact Icon -->
             <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
