--- a/listings.html
+++ b/listings.html
@@ -4,29 +4,144 @@
 <head>
     <meta charset="UTF-8">
     <title>Sky TV Guide - Listings</title>
-    <link rel="icon" type="image/x-icon" href="images/fav-icon.ico">
-    <link rel="stylesheet" href="css/global-style.css">
-    <link rel="stylesheet" href="css/listings-style.css"> <!-- Overrides global-style -->
+    <link rel="icon"
+        type="image/x-icon"
+        href="images/fav-icon.ico">
+    <link rel="stylesheet"
+        href="css/global-style.css">
+    <link rel="stylesheet"
+        href="css/listings-style.css">
+    <link rel="stylesheet"
+        href="css/header-style.css">
 </head>
 
 <body>
 
+    <header class="site-header">
+        <div class="header-top">
+
+            <!-- Logo -->
+            <a href="index.html"
+                class="logo-link">
+                <img src="images/logo.png"
+                    alt="TVBridge Logo"
+                    class="header-logo">
+            </a>
+
+            <!-- Nav + Search wrapper -->
+            <div class="nav-search-wrapper">
+                <nav class="main-nav">
+                    <a class="nav-item"
+                        href="index.html">
+                        <span class="nav-icon">
+                            <!-- Home Icon -->
+                            <svg width="22"
+                                height="22"
+                                viewBox="0 0 24 24"
+                                fill="none"
+                                stroke="currentColor"
+                                stroke-width="2"
+                                stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <path d="M3 10L12 4L21 10V20H3V10Z"></path>
+                            </svg>
+                        </span>
+                        <span class="nav-label">Home</span>
+                    </a>
+
+                    <a class="nav-item"
+                        href="about.html">
+                        <span class="nav-icon">
+                            <!-- About Icon -->
+                            <svg width="22"
+                                height="22"
+                                viewBox="0 0 24 24"
+                                fill="none"
+                                stroke="currentColor"
+                                stroke-width="2"
+                                stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <circle cx="12"
+                                    cy="12"
+                                    r="9"></circle>
+                                <path d="M12 8V12"></path>
+                                <circle cx="12"
+                                    cy="16"
+                                    r="1"
+                                    fill="currentColor"></circle>
+                            </svg>
+                        </span>
+                        <span class="nav-label">About</span>
+                    </a>
+
+                    <a class="nav-item"
+                        href="contact.html">
+                        <span class="nav-icon">
+                            <!-- Contact Icon -->
+                            <svg width="22"
+                                height="22"
+                                viewBox="0 0 24 24"
+                                fill="none"
+                                stroke="currentColor"
+                                stroke-width="2"
+                                stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <path d="M4 4H20V16H5L4 17V4Z"></path>
+                                <path d="M4 4L12 11L20 4"></path>
+                            </svg>
+                        </span>
+                        <span class="nav-label">Contact</span>
+                    </a>
+
+                    <a class="nav-item active"
+                        href="tv-guide.html">
+                        <span class="nav-icon">
+                            <!-- TV Guide Icon -->
+                            <svg width="22"
+                                height="22"
+                                viewBox="0 0 24 24"
+                                fill="none"
+                                stroke="currentColor"
+                                stroke-width="2"
+                                stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <rect x="3"
+                                    y="5"
+                                    width="18"
+                                    height="13"
+                                    rx="2"></rect>
+                                <line x1="3"
+                                    y1="10"
+                                    x2="21"
+                                    y2="10"></line>
+                            </svg>
+                        </span>
+                        <span class="nav-label">TV Guide</span>
+                    </a>
+                </nav>
+
+                <!-- Search -->
+                <!-- <div id="search-container">
+        <input type="text" id="search-input" placeholder="🔎 Search channels...">
+        <button id="clear-search">✖</button>
+      </div>
+    </div> -->
+
+            </div>
+    </header>
+
     <!-- Theme toggle -->
-    <button id="theme-toggle" aria-label="Toggle dark mode">
+    <button id="theme-toggle"
+        aria-label="Toggle dark mode">
         🌙<span class="theme-label">DARK<br>MODE</span>
     </button>
 
-    <!-- Header with logo and back button -->
-    <header style="text-align:center; margin-bottom:12px;">
-        <a href="index.html">
-            <img src="images/logo.png" alt="TVBridge Logo" class="header-logo">
-        </a>
-        <br>
-        <button class="return" onclick="location.href='index.html'">← Channel list</button>
-    </header>
+    <button class="return"
+        onclick="location.href='tv-guide.html'">← Channel list</button>
 
     <!-- Channel info -->
-    <div id="channel-info" style="text-align:center;">
+    <div id="channel-info"
+        style="text-align:center;">
         <h1 id="channel-logo"></h1>
         <h1 id="channel-name"></h1>
     </div>
@@ -41,7 +156,8 @@
     </div> -->
 
     <!-- Day navigation -->
-    <div id="day-nav" style="text-align:center; margin:10px 0;">
+    <div id="day-nav"
+        style="text-align:center; margin:10px 0;">
         <button id="prev-day">← Previous day</button>
         <button id="next-day">Next day →</button>
     </div>
@@ -49,8 +165,10 @@
     <!-- Schedule container -->
     <div id="schedule"></div>
 
-    <button id="scroll-top" aria-label="Scroll to top"><small>↑ Top</small></button>
-    <button id="scroll-now" aria-label="Scroll to now"><small>Go to now/next ↓</small></button>
+    <button id="scroll-top"
+        aria-label="Scroll to top"><small>↑ Top</small></button>
+    <button id="scroll-now"
+        aria-label="Scroll to now"><small>Go to now/next ↓</small></button>
 
 
     <!-- Footer -->
@@ -64,8 +182,12 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="js/listings-script.js" defer></script>
-    <script src="js/theme.js" defer></script>
+    <script src="js/listings-script.js"
+        defer></script>
+    <script src="js/theme.js"
+        defer></script>
+    <script src="js/header-script.js"
+        defer></script>
 
     <!-- Debug -->
     <!-- <div id="debug-box" style="background:#fee;color:#900;padding:10px;white-space:pre-wrap;"></div>
