Added references to all pages

--- a/listings.html
+++ b/listings.html
@@ -1,3 +1,74 @@
+<!-- References
+
+1. Document Structure
+   - <!DOCTYPE html>, <html>, <head>, <body>, <meta charset="UTF-8">
+     MDN: https://developer.mozilla.org/en-US/docs/Glossary/Doctype
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/html
+     W3Schools: https://www.w3schools.com/html/html_basic.asp
+
+2. Page Title and Favicon
+   - <title>, <link rel="icon">
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/title
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/link
+     W3Schools: https://www.w3schools.com/tags/tag_link.asp
+
+3. Linking CSS
+   - <link rel="stylesheet" href="...">
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/link
+     W3Schools: https://www.w3schools.com/html/html_css.asp
+
+4. Header and Navigation
+   - <header>, <nav>, <a>, <span>, <img>
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/header
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/nav
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img
+     W3Schools: https://www.w3schools.com/html/html_links.asp
+     W3Schools: https://www.w3schools.com/html/html_images.asp
+
+5. SVG Icons Inline
+   - <svg>, <path>, <rect>, <line>, <circle>
+     MDN: https://developer.mozilla.org/en-US/docs/Web/SVG
+     W3Schools: https://www.w3schools.com/graphics/svg_intro.asp
+
+6. Buttons
+   - <button>, onclick, aria-label
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/button
+     W3Schools: https://www.w3schools.com/tags/tag_button.asp
+
+7. Dynamic Content Containers
+   - <div>, <h1>, <span>
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/div
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/h1
+     W3Schools: https://www.w3schools.com/html/html_headings.asp
+
+8. Footer
+   - <footer>, <small>, <a href="mailto:...">
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/footer
+     W3Schools: https://www.w3schools.com/tags/tag_footer.asp
+     MDN mailto: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a#mailto_links
+
+9. Accessibility
+   - aria-label, semantic HTML (<header>, <nav>, <footer>)
+     MDN: https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA
+     W3Schools: https://www.w3schools.com/tags/att_global_aria-label.asp
+
+10. Script Loading
+    - <script src="..." defer>
+      MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/script
+      W3Schools: https://www.w3schools.com/tags/att_script_defer.asp
+
+11. Inline Styles / Comments
+    - style="...",
+      MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/style
+      MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Comment
+
+12. Debugging in HTML
+    - window.onerror, custom debug box
+      MDN: https://developer.mozilla.org/en-US/docs/Web/API/GlobalEventHandlers/onerror
+      MDN: https://developer.mozilla.org/en-US/docs/Web/API/Console
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
