--- a/tv-guide.html
+++ b/tv-guide.html
@@ -1,3 +1,74 @@
+<!-- References
+
+1. Document Structure
+   - <!DOCTYPE html>, <html>, <head>, <body>, <meta charset="UTF-8">
+     MDN: https://developer.mozilla.org/en-US/docs/Glossary/Doctype
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/html
+     W3Schools: https://www.w3schools.com/html/html_basic.asp
+
+2. Page Title and Favicon
+   - <title>, <link rel="icon">
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/title
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/link
+     W3Schools: https://www.w3schools.com/tags/tag_link.asp
+
+3. Linking CSS
+   - <link rel="stylesheet" href="...">
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/link
+     W3Schools: https://www.w3schools.com/html/html_css.asp
+
+4. Header and Navigation
+   - <header>, <nav>, <a>, <span>, <img>
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/header
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/nav
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img
+     W3Schools: https://www.w3schools.com/html/html_links.asp
+     W3Schools: https://www.w3schools.com/html/html_images.asp
+
+5. SVG Icons Inline
+   - <svg>, <path>, <rect>, <line>, <circle>
+     MDN: https://developer.mozilla.org/en-US/docs/Web/SVG
+     W3Schools: https://www.w3schools.com/graphics/svg_intro.asp
+
+6. Search bar
+   - <input type="text">, <button>
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/button
+
+7. Buttons
+   - <button>, aria-label, onclick
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/button
+     W3Schools: https://www.w3schools.com/tags/tag_button.asp
+
+8. Main content / layout
+   - <main>, <section>, <div>, <h2>
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/main
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/section
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/div
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/Heading_Elements
+
+9. Footer
+   - <footer>, <small>, <a href="mailto:...">
+     MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/footer
+     W3Schools: https://www.w3schools.com/tags/tag_footer.asp
+     MDN mailto: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a#mailto_links
+
+10. Accessibility
+    - aria-label, semantic HTML (<header>, <nav>, <main>, <footer>)
+      MDN: https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA
+      W3Schools: https://www.w3schools.com/tags/att_global_aria-label.asp
+
+11. Script Loading
+    - <script src="..." defer>
+      MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/script
+      W3Schools: https://www.w3schools.com/tags/att_script_defer.asp
+
+12. Layout and CSS hooks
+    - Classes for styling: .channels-container, .channel-column, .channels-list
+      MDN: https://developer.mozilla.org/en-US/docs/Web/CSS/Class_selectors
+      W3Schools: https://www.w3schools.com/css/css_selectors.asp
+-->
 <!DOCTYPE html>
 <html lang="en">
 
