--- a/tv-guide.html
+++ b/tv-guide.html
@@ -159,17 +159,17 @@
 
   <main class="channels-container">
     <section class="channel-column" id="uk-column">
-      <h2 style="text-align:center;">United Kingdom</h2>
+      <h3 class="heading3" style="text-align:center;">United Kingdom</h3><hr/>
       <div id="channels-uk-list" class="channels-list"></div>
     </section>
 
     <section class="channel-column" id="ireland-column">
-      <h2 style="text-align:center;">Ireland</h2>
+      <h3 class="heading3" style="text-align:center;">Ireland</h3><hr/>
       <div id="channels-ireland-list" class="channels-list"></div>
     </section>
   </main>
 
-  <button id="scroll-top" class="btn btn-secondary btn-sm" aria-label="Scroll to top">
+  <button id="scroll-top" class="btn btn-secondary btn-sm custom-btn" aria-label="Scroll to top">
     ↑ Top
   </button>
 
