--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Sky TV Guide - Channels</title>
   <link rel="icon" type="image/x-icon" href="images/fav-icon.ico">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/global-style.css">
   <link rel="stylesheet" href="css/tvguide-style.css">
   <link rel="stylesheet" href="css/header-style.css">
@@ -77,7 +78,7 @@
       </div>
     </div> -->
 
-  </div>
+    </div>
 </header>
 
 <button id="theme-toggle" aria-label="Toggle dark mode">
@@ -86,7 +87,7 @@
 
 <!-- #########################-->
 
-<button id="scroll-top" aria-label="Scroll to top"><small>↑ Top</small></button>
+<button id="scroll-top" class="btn btn-secondary btn-sm custom-btn" aria-label="Scroll to top">↑ Top</button>
 
 <footer>
   <small>Programme images may not be accurate. Channel logos and programme images are copyright of their
