--- a/listings.html
+++ b/listings.html
@@ -78,7 +78,7 @@
     <link rel="icon" type="image/x-icon" href="images/fav-icon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/global-style.css">
-    <link rel="stylesheet" href="css/tvguide-style.css">
+    <link rel="stylesheet" href="css/listings-style.css">
     <link rel="stylesheet" href="css/header-style.css">
 </head>
 
@@ -158,8 +158,8 @@
         🌙<span class="theme-label">DARK<br>MODE</span>
     </button>
 
-    <button id="channel-list" class="btn btn-secondary btn-sm" onclick="location.href='tv-guide.html'">
-        ← Channel list
+    <button id="channel-list" class="btn btn-secondary btn-sm custom-btn" onclick="location.href='tv-guide.html'">
+        ← Back to channel list
     </button>
 
 
@@ -180,19 +180,19 @@
 
     <!-- Day navigation -->
     <div id="day-nav" style="text-align:center; margin:10px 0;">
-        <button id="prev-day" class="btn btn-secondary btn-sm">← Previous day</button>
-        <button id="next-day" class="btn btn-secondary btn-sm">Next day →</button>
+        <button id="prev-day" class="btn btn-secondary btn-sm custom-btn">← Previous day</button>
+        <button id="next-day" class="btn btn-secondary btn-sm custom-btn">Next day →</button>
     </div>
 
     <!-- Schedule container -->
     <div id="schedule"></div>
 
     <!-- Floating buttons -->
-    <button id="scroll-top" class="btn btn-secondary btn-sm" aria-label="Scroll to top">
+    <button id="scroll-top" class="btn btn-secondary btn-sm custom-btn" aria-label="Scroll to top">
         ↑ Top
     </button>
 
-    <button id="scroll-now" class="btn btn-secondary btn-sm" aria-label="Scroll to now">
+    <button id="scroll-now" class="btn btn-secondary btn-sm custom-btn" aria-label="Scroll to now">
         Go to now/next ↓
     </button>
 
