Too much bug spray *CHOKES*. I'm OK!

--- a/about.html
+++ b/about.html
@@ -320,8 +320,9 @@
       </p>
 
       <p>
-        Notice: Programme images may not be accurate. Channel logos and programme images are copyright of their
-        respective owners.</p>
+        <b>Note: Programme images may not be accurate. Channel logos and programme images are copyright of their
+          respective owners.</b>
+      </p>
 
     </div>
   </div>
