--- a/contact.html
+++ b/contact.html
@@ -186,8 +186,8 @@
       for discovering, planning, and enjoying your favorite shows.</p>
 
     <p>
-      Note: Programme images may not be accurate. Channel logos and programme images are copyright of their
-      respective owners.</p>
+      <b>Note: Programme images may not be accurate. Channel logos and programme images are copyright of their
+      respective owners.</b></p>
   </div>
 
   <hr>
@@ -200,10 +200,11 @@
         width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
     <div class="contact-details">
+      <img id="logo-image" src="images/logo.png">
       <h2>Get in Touch</h2>
-      <p><strong>Email:</strong> <a href="mailto:info@TVBridge.com" target="_blank">info@TVBridge.com</a></p>
-      <p><strong>Phone:</strong> <a href="tel:+3531 4498500" target="_blank">+353 (0)1 4498 500</a></p>
-      <p><strong>Address:</strong><a
+      <p><strong>Email:</strong> <a href="mailto:info@TVBridge.com">info@TVBridge.com</a></p>
+      <p><strong>Phone:</strong> <a href="tel:+3531 4498500">+353 (0)1 4498 500</a></p>
+      <p><strong>Address:</strong> <a
           href="https://google.com/maps/search/National%20College%20of%20Ireland,%20Mayor%20Square,%20IFSC,%20Dublin%201,%20D01%20K6W2,%20Ireland/"
           target="_blank">Mayor
           Square, IFSC, Dublin 1, D01 K6W2, Ireland</a></p>
